[fix]: Change dots layout from grid-cols-3 in lg to sm
This commit includes:
- making all elements including dots to a 3-column layout as soon as it hits small screen size, instead of large.
  - this is so that the 'Abilities' section does not look awkward and fat.
- last commit accidentally changed 'Attributes' heading to 'dotss'. it's back to normal 'Attributes'

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -135,5 +135,5 @@ main h4 {
 
 /* Dot-wrapper (label w/ dot-group) from 1 column to 3 */
 .dots-wrapper {
-        @apply grid gap-5 sm:grid-cols-3 lg:grid-cols-1;
+        @apply grid gap-5 sm:grid-cols-1;
 }
